# proplum-webui

./: .env.example  INSTALL.md  README.md  README_PROD.md  docker-compose.dev.yml  docker-compose.offline.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  sql_db.md
backend/src/: .env.template  config.py  consts.py  db_helper.py  enums.py  main.py  utils.py
backend/src/api/: __init__.py  datasource.py  datasource_column.py  load_info.py  validation.py
backend/src/crud/: datasource.py  datasource_column.py  load_info.py  validation.py
backend/src/models/: datasource_column.py
backend/src/schemas/: datasource.py  datasource_column.py  load_info.py  validation.py
docker/dev/: Dockerfile.backend  Dockerfile.frontend
docker/prod/: Dockerfile.backend  Dockerfile.frontend
frontend/: .env.template  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  const.ts  envs.ts  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/Alert/: Alert.tsx
frontend/src/components/AppWrapper/: AppWrapper.tsx
frontend/src/components/DagEditor/: DagEditor.tsx  (+3 more)
frontend/src/hooks/: useDebounce.ts  useDebouncedEffect.ts  usePrevious.ts
frontend/src/store/: tableStore.ts
frontend/src/styles/: animations.css  index.css  react-flow.css  reset.css  table.css
frontend/src/utils/: airflow.ts  airflowDag.ts  common.ts  math.ts  parse.ts  table.ts  text.ts  time.ts  toast.tsx  withExactTypeCheck.ts
nginx/: default.conf  nginx.conf
(+99 files in other folders)
